k8s/mainfests/service.yml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: next-web-ecommerce-app
  labels:
    app: next-web-ecommerce-app
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: next-web-ecommerce-app
  type: NodePort
