k8s/mainfests/ingress.yml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-web-ecommerce-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: malikeccomerceapp.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-web-ecommerce-app
            port:
              number: 80
